# relearning-ai

./: .gitignore  .python-version  README.md  pyproject.toml
nbs/: 001-linear_regression.ipynb  002-init_weights.ipynb  003-pytorchification.ipynb  004-debug_manual_losses.ipynb  005-optimizers.ipynb  006-classification.ipynb  007-text_classification.ipynb  007z-text_classification_eyes-off.ipynb  009-rnn_lstm_gru_text_classification.ipynb  010-accelerate.ipynb  011-cs336-a1-bpe_tokenizer.ipynb  012-cs336-a1-building_LM.ipynb  013-cs336-a1-building_LM-eyesoff.ipynb  014-cs336-a1-ce_loss_adamw_optimizers.ipynb  014-cs336-a1-losses_optimizers.ipynb  015-cs336-a1-training_loop_and_utilities.ipynb  015-cs336-a1-utilities.ipynb  016-cs336-a1-full_assignment.ipynb  017-cs336-a1-full_assignment_test.ipynb  301-pot-instruction_tuning_course.ipynb  302-smol-course-ch1-sft.ipynb  303-smol-course-ch1-sft.py  401-s2s-intro-lesson.ipynb  501-distillbert.ipynb  502-accelerate.ipynb  503-gliclass-explorations.ipynb  504-benchmarking-gliner-flashdeberta-inferencing.ipynb  model.pth  scratchpad.ipynb
