[project]
name = "learning-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "transformers>=4.53.1",
]
